# pogo_breakpoints

./: README.md  pyproject.toml
data/: gamemaster.json  gamemaster_pokemoves.json  great.json  great_remix.json  master.json  ultra.json  ultra_premier.json  ultra_remix.json
pvp_damage/: damage.py  leagues.py  moves.py  pokemon.py  utils.py
pvp_damage/models/: constants.py  leagues.py  moves.py  pokemon.py
scripts/: fetch_data.py  main.py
tests/: test_damage.py  test_leagues.py  test_moves.py  test_pokemon.py
