[tool.poetry]
name = "pvp_damage"
version = "0.1.0"
description = "Pokemon GO PVP breakpoints and bulkpoints simulator"
authors = ["Tushar Chandra <me@tusharc.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.65.2"
pydantic = "^1.8.2"
requests = "^2.25.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
ipython = "^8.20.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
