[tool.poetry]
name = "pvp_damage"
version = "0.1.0"
description = "Pokemon GO PVP breakpoints and bulkpoints simulator"
authors = ["Tushar Chandra <me@tusharc.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"
requests = "^2.25.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
ipython = "^8.20.0"
pytest = "^7.4.4"
pyright = "^1.1.345"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true
unsafe-fixes = true

ignore = [
  "E501", # line length
]
select = [
  "F",
  "E",
  "W",
  "I",      # isort
  "RUF",    # ruff rules
  "N",      # pep8-naming
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "SIM",    # flake8-simplify
  "TID252", # tidy imports
  "UP",     # pyupgrade
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
executionEnvironments = [{ root = "." }]
