[tool.poetry]
name = "pvp_damage"
version = "0.1.0"
description = "Pokemon GO PVP breakpoints and bulkpoints simulator"
authors = ["Tushar Chandra <me@tusharc.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.0"
requests = "^2.25.1"
httpx = "^0.26.0"
dirty-equals = "^0.7.1.post0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
ipython = "^8.21.0"
pytest = "^8.0.0"
pyright = "^1.1.349"
dirty-equals = "^0.7.1.post0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true
unsafe-fixes = true

[tool.ruff.lint]
ignore = [
  "E501", # line length
]
select = [
  "F",
  "E",
  "W",
  "I",      # isort
  "RUF",    # ruff rules
  "N",      # pep8-naming
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "SIM",    # flake8-simplify
  "TID252", # tidy imports
  "FURB",   # refurb
  "UP",     # pyupgrade
]

[tool.ruff.format]
preview = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
executionEnvironments = [{ root = "." }]
